--- a/index.html
+++ b/index.html
@@ -1,1 +1,51 @@
-<h1>Hello!</h1>
+<!DOCTYPE html>
+<html lang="cs">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Můj osobní web</title>
+    <style>
+        /* Styl pro hlavičku */
+        header {
+            text-align: left;
+            background-color: #007bff;
+            color: Black;
+            padding: 20px;
+        }
+
+        /* Styl pro obsah stránky */
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Jan Mareš</h1>
+        <p>MFF UK</p>
+    </header>
+
+    <div class="container">
+        <h2>About me</h2>
+        <p>Student of the third year of the Bachelor's degree in Mathematical Modeling at the Faculty of Mathematics and Physics of Charles University</p>
+
+        <h2>CV</h2>
+        <p>You can download my <a href="link-to-your-cv.pdf" target="_blank">resume (PDF)</a> here.</p>
+
+
+        <h2>Contact</h2>
+        <p>E-mail: jenda.mares[at]centrum.cz</p>
+        <p>GitHub: <a href="https://github.com/dostald2">https://github.com/dostald2</a></p>
+     
+        <h2>Favorite activities</h2>
+        <ul>
+            <li>Sports</li>
+            <li>Traveling</li>
+            <li>Programming</li>
+           
+        </ul>
+    </div>
+</body>
+</html>
