--- a/index.html
+++ b/index.html
@@ -3,18 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Můj osobní web</title>
+    <title>Personal web-page</title>
     <style>
         /* Styl pro hlavičku */
         header {
             text-align: left;
-            background-color: #007bff;
+            background-color: #D3D3D3;
             color: Black;
             padding: 20px;
         }
 
         /* Styl pro obsah stránky */
         .container {
+            text-align: left;
             max-width: 800px;
             margin: 0 auto;
             padding: 20px;
@@ -29,22 +30,16 @@
 
     <div class="container">
         <h2>About me</h2>
-        <p>Student of the third year of the Bachelor's degree in Mathematical Modeling at the Faculty of Mathematics and Physics of Charles University</p>
-
-        <h2>CV</h2>
-        <p>You can download my <a href="link-to-your-cv.pdf" target="_blank">resume (PDF)</a> here.</p>
-
+        <p>Bachelor's degree student in Mathematical Modeling at the Faculty of Mathematics and Physics of Charles University</p>
 
         <h2>Contact</h2>
         <p>E-mail: jenda.mares[at]centrum.cz</p>
-        <p>GitHub: <a href="https://github.com/dostald2">https://github.com/dostald2</a></p>
      
-        <h2>Favorite activities</h2>
+        <h2>Areas of interest</h2>
         <ul>
-            <li>Sports</li>
-            <li>Traveling</li>
+            <li>Mathematical modeling</li>
+            <li>Thermal convection</li>
             <li>Programming</li>
-           
         </ul>
     </div>
 </body>
