--- a/index.html
+++ b/index.html
@@ -15,10 +15,9 @@
 
         /* Styl pro obsah stránky */
         .container {
-            text-align: left;
             max-width: 800px;
             margin: 0 auto;
-            padding: 20px;
+            padding: left;
         }
     </style>
 </head>
