--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         .container {
             max-width: 800px;
             margin: 0 auto;
-            padding: left;
+            padding: 0px;
         }
     </style>
 </head>
@@ -27,7 +27,7 @@
         <p>MFF UK</p>
     </header>
 
-    <div class="container">
+    <div align = "left">
         <h2>About me</h2>
         <p>Bachelor's degree student in Mathematical Modeling at the Faculty of Mathematics and Physics of Charles University</p>
 
