--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         .container {
             max-width: 800px;
             margin: 0 auto;
-            padding: 0px;
+            padding-left: 20px;
+            text-align: left;
         }
     </style>
 </head>
@@ -27,7 +28,7 @@
         <p>MFF UK</p>
     </header>
 
-    <div align = "left">
+    <div class="container">
         <h2>About me</h2>
         <p>Bachelor's degree student in Mathematical Modeling at the Faculty of Mathematics and Physics of Charles University</p>
 
