--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <p>MFF UK</p>
     </header>
 
-    <div class="container">
+    <div align: "left">
         <h2>About me</h2>
         <p>Bachelor's degree student in Mathematical Modeling at the Faculty of Mathematics and Physics of Charles University</p>
 
