--- a/index.html
+++ b/index.html
@@ -25,12 +25,14 @@
 <body>
     <header>
         <h1>Jan Mareš</h1>
-        <p>MFF UK</p>
+        <p>Undergraduate student</p>
     </header>
 
     <div align: "left">
         <h2>About me</h2>
-        <p>Bachelor's degree student in Mathematical Modeling at the Faculty of Mathematics and Physics of Charles University</p>
+        <p>Charles University</p>
+        <p>Faculty of Mathematics and Physics</p>
+        <p>Undergraduate Student of Mathematical Modeling</p>
 
         <h2>Contact</h2>
         <p>E-mail: jenda.mares[at]centrum.cz</p>
@@ -40,6 +42,7 @@
             <li>Mathematical modeling</li>
             <li>Thermal convection</li>
             <li>Programming</li>
+            <li>Sports</li>
         </ul>
     </div>
 </body>
