--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
     <header>
         <h1>Jan Mareš</h1>
-        <p>Undergraduate student</p>
+        <p>Undergraduate student - MFF UK</p>
     </header>
 
     <div align: "left">
